plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.take'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

def generated = 'src/main/generated'

sourceSets {
    main.java.srcDirs += [generated]
}

dependencies {
    // 시간 데이터포맷
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'

    // 비밀번호 암호화 passwordEncoder
    implementation 'org.springframework.security:spring-security-crypto'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mustache'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'com.mysql:mysql-connector-j:8.0.33'    // runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT 관련 의존성 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // 이메일 발송 의존성
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 포트원 라이브러리
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // 웹소켓
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // pdf 생성 의존성
    implementation 'com.itextpdf:itext7-core:8.0.3'

    // 유튜브 관련
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.json:json:20231013'

}

tasks.named('test') {
    useJUnitPlatform()
}

// clean 시 생성된 Q클래스 삭제
tasks.named('clean') {
    doLast {
        file(generated).deleteDir()
    }
}

// compileJava 시 Q클래스 생성 위치 지정
tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory = file(generated)
}